# game

./: Cargo.toml
src/: actions.rs  button.rs  idx.rs  lib.rs  life.rs  loader.rs  map.rs  pathfinder.rs  previsualisation.rs  progress_bar.rs  random.rs  textbox.rs  units.rs
