[package]
name = "game"
version = "0.1.0"
authors = ["Mubelotix <mubelotix@gmail.com>"]
edition = "2018"
publish = ["false"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen-futures = "0.4"
wasm-bindgen = "0.2"
wasm-game-lib = {path="../wasm-game-lib"}
console_error_panic_hook = "0.1.6"
futures = "0.3"
arr_macro = "0.1.3"

[dependencies.web-sys]
version = "0.3"
features = [
    "CanvasGradient",
    "CanvasRenderingContext2d",
    "HtmlCanvasElement"
]